--- a/index.html
+++ b/index.html
@@ -6,18 +6,31 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<title></title>
 		<link rel="stylesheet" href="assets/css/normalize.css" />
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
-			integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous" />
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 		<link rel="stylesheet" href="assets/css/main.css"/>
 	</head>
 	<body>
 		<div class="container">
-			<h1>Hello HTML5</h1>
-			<p>See you at <a href="http://TeroKarvinen.com">TeroKarvinen.com</a>!</p>
-			<p id="status">Loading...</p>
+			<nav class="navbar navbar-light bg-faded">
+				  <form id="buttons" class="form-inline">
+				    
+				    <button class="btn btn-outline-primary" type="button">Main button</button>
+				    <button class="btn btn-outline-primary" type="button">Main button</button>
+				    <button class="btn btn-outline-primary" type="button">Main button</button>
+				    <button class="btn btn-outline-primary" type="button">Main button</button>
+				  </form>
+				  <form class="form-inline my-2 my-lg-0">
+				      <input id="textQuery" class="form-control mr-sm-2" type="text" placeholder="Add A Topic" name="query">
+
+				      <button id="add" class="btn btn-outline-primary my-2 my-sm-0">Add</button>
+			    </form>
+			</nav>
 		</div>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"
-			integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+		<div class="container container-fluid">
+		<div class="row">
+			<div id="grid" class="col-sm-12"></div>
+		<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+		<script src="assets/js/main.js"></script>
 	</body>
 </html>
