--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 			<nav class="navbar navbar-light bg-faded">
 				  <form id="buttons" class="form-inline">
 				    
-				    <button class="btn btn-outline-primary" type="button">Main button</button>
-				    <button class="btn btn-outline-primary" type="button">Main button</button>
-				    <button class="btn btn-outline-primary" type="button">Main button</button>
-				    <button class="btn btn-outline-primary" type="button">Main button</button>
+				    <button class="btn btn-outline-primary queryButton" onclick="getGiphy(this);" type="button" value="Goku">Goku</button>
+				    <button class="btn btn-outline-primary" type="button" value="Freezer" onclick="getGiphy(this);">Freezer</button>
+				    <button class="btn btn-outline-primary" type="button" value="Chichi" onclick="getGiphy(this);">Chichi</button>
+				    <button class="btn btn-outline-primary" type="button" value="Beerus" onclick="getGiphy(this);">Beerus</button>
 				  </form>
 				  <form class="form-inline my-2 my-lg-0">
 				      <input id="textQuery" class="form-control mr-sm-2" type="text" placeholder="Add A Topic" name="query">
